// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders ./src/auto-complete/demo/allow-clear.vue correctly 1`] = `
"<div style="width: 200px;" class="xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select-single xy-select-allow-clear xy-select-show-search">
  <!---->
  <div class="xy-select-selector"><span class="xy-select-selection-search"><input type="search" class="xy-select-selection-search-input" id="rc_select_TEST_OR_SSR" autocomplete="off" role="combobox" aria-haspopup="listbox" aria-owns="rc_select_TEST_OR_SSR_list" aria-autocomplete="list" aria-controls="rc_select_TEST_OR_SSR_list" aria-activedescendant="rc_select_TEST_OR_SSR_list_0" value=""></span>
    <!----><span class="xy-select-selection-placeholder">Clearable</span>
  </div>
  <!---->
  <!---->
  <!---->
</div>
<br>
<br>
<div style="width: 200px;" class="xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select-single xy-select-allow-clear xy-select-show-search">
  <!---->
  <div class="xy-select-selector"><span class="xy-select-selection-search"><input type="search" class="xy-select-selection-search-input" id="rc_select_TEST_OR_SSR" autocomplete="off" role="combobox" aria-haspopup="listbox" aria-owns="rc_select_TEST_OR_SSR_list" aria-autocomplete="list" aria-controls="rc_select_TEST_OR_SSR_list" aria-activedescendant="rc_select_TEST_OR_SSR_list_0" value=""></span>
    <!----><span class="xy-select-selection-placeholder">Customized clear icon</span>
  </div>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`renders ./src/auto-complete/demo/basic.vue correctly 1`] = `
"<div style="width: 200px;" class="xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select-single xy-select-show-search">
  <!---->
  <div class="xy-select-selector"><span class="xy-select-selection-search"><input type="search" class="xy-select-selection-search-input" id="rc_select_TEST_OR_SSR" autocomplete="off" role="combobox" aria-haspopup="listbox" aria-owns="rc_select_TEST_OR_SSR_list" aria-autocomplete="list" aria-controls="rc_select_TEST_OR_SSR_list" aria-activedescendant="rc_select_TEST_OR_SSR_list_0" value=""></span>
    <!----><span class="xy-select-selection-placeholder">input here</span>
  </div>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`renders ./src/auto-complete/demo/border-less.vue correctly 1`] = `
"<div style="width: 200px;" class="xy-select-show-search xy-select-auto-complete xy-select-borderless css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select xy-select-show-search xy-select-auto-complete xy-select-borderless css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select-single xy-select-show-search">
  <!---->
  <div class="xy-select-selector"><span class="xy-select-selection-search"><input type="search" class="xy-select-selection-search-input" id="rc_select_TEST_OR_SSR" autocomplete="off" role="combobox" aria-haspopup="listbox" aria-owns="rc_select_TEST_OR_SSR_list" aria-autocomplete="list" aria-controls="rc_select_TEST_OR_SSR_list" aria-activedescendant="rc_select_TEST_OR_SSR_list_0" value=""></span>
    <!----><span class="xy-select-selection-placeholder">border less</span>
  </div>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`renders ./src/auto-complete/demo/certain-category.vue correctly 1`] = `
"<div data-v-5375fdee="" class="certain-category-search-wrapper" style="width: 250px;">
  <div data-v-5375fdee="" popupclassname="certain-category-search-dropdown" class="certain-category-search xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p certain-category-search xy-select-show-search xy-select-auto-complete xy-select certain-category-search xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p certain-category-search xy-select-show-search xy-select-auto-complete xy-select-single xy-select-customize-input xy-select-show-search" style="width: 250px;">
    <!---->
    <div class="xy-select-selector"><span class="xy-select-selection-search"><span data-v-5375fdee="" class="xy-input-group-wrapper xy-select-selection-search-input xy-input-search xy-input-search-large xy-select-selection-search-input xy-select-selection-search-input xy-input-search xy-input-search-large xy-select-selection-search-input xy-input-group-wrapper-lg css-dev-only-do-not-override-1p3hq3p"><span class="xy-input-wrapper xy-input-group css-dev-only-do-not-override-1p3hq3p"><!----><input type="search" class="xy-input xy-input-lg css-dev-only-do-not-override-1p3hq3p" placeholder="input here" autocomplete="off" id="rc_select_TEST_OR_SSR" role="combobox" aria-haspopup="listbox" aria-owns="rc_select_TEST_OR_SSR_list" aria-autocomplete="list" aria-controls="rc_select_TEST_OR_SSR_list" aria-activedescendant="rc_select_TEST_OR_SSR_list_0" value=""><span class="xy-input-group-addon"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-default xy-btn-lg xy-input-search-button xy-btn-icon-only" type="button"><span role="img" aria-label="search" class="anticon anticon-search"><svg focusable="false" data-icon="search" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"></path></svg><!----></span></button></span></span></span></span>
      <!----><span class="xy-select-selection-placeholder"><!----></span>
    </div>
    <!---->
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`renders ./src/auto-complete/demo/custom.vue correctly 1`] = `
"<div style="width: 200px;" class="xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select-single xy-select-customize-input xy-select-show-search">
  <!---->
  <div class="xy-select-selector"><span class="xy-select-selection-search"><textarea class="xy-input xy-select-selection-search-input custom css-dev-only-do-not-override-1p3hq3p" placeholder="input here" id="rc_select_TEST_OR_SSR" autocomplete="off" role="combobox" aria-haspopup="listbox" aria-owns="rc_select_TEST_OR_SSR_list" aria-autocomplete="list" aria-controls="rc_select_TEST_OR_SSR_list" aria-activedescendant="rc_select_TEST_OR_SSR_list_0" style="height: 50px;" value=""></textarea></span>
    <!----><span class="xy-select-selection-placeholder"><!----></span>
  </div>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`renders ./src/auto-complete/demo/non-case-sensitive.vue correctly 1`] = `
"<div style="width: 200px;" class="xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select-single xy-select-show-search">
  <!---->
  <div class="xy-select-selector"><span class="xy-select-selection-search"><input type="search" class="xy-select-selection-search-input" id="rc_select_TEST_OR_SSR" autocomplete="off" role="combobox" aria-haspopup="listbox" aria-owns="rc_select_TEST_OR_SSR_list" aria-autocomplete="list" aria-controls="rc_select_TEST_OR_SSR_list" aria-activedescendant="rc_select_TEST_OR_SSR_list_0" value=""></span>
    <!----><span class="xy-select-selection-placeholder">input here</span>
  </div>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`renders ./src/auto-complete/demo/options.vue correctly 1`] = `
"<div style="width: 200px;" class="xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select-single xy-select-show-search">
  <!---->
  <div class="xy-select-selector"><span class="xy-select-selection-search"><input type="search" class="xy-select-selection-search-input" id="rc_select_TEST_OR_SSR" autocomplete="off" role="combobox" aria-haspopup="listbox" aria-owns="rc_select_TEST_OR_SSR_list" aria-autocomplete="list" aria-controls="rc_select_TEST_OR_SSR_list" aria-activedescendant="rc_select_TEST_OR_SSR_list_0" value=""></span>
    <!----><span class="xy-select-selection-placeholder">input here</span>
  </div>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`renders ./src/auto-complete/demo/status.vue correctly 1`] = `
"<div style="width: 100%;" class="xy-space css-dev-only-do-not-override-1p3hq3p xy-space-vertical">
  <div class="xy-space-item" style="margin-bottom: 8px;">
    <div style="width: 200px;" class="xy-select-show-search xy-select-auto-complete xy-select-status-error css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select xy-select-show-search xy-select-auto-complete xy-select-status-error css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select-single xy-select-show-search">
      <!---->
      <div class="xy-select-selector"><span class="xy-select-selection-search"><input type="search" class="xy-select-selection-search-input" id="rc_select_TEST_OR_SSR" autocomplete="off" role="combobox" aria-haspopup="listbox" aria-owns="rc_select_TEST_OR_SSR_list" aria-autocomplete="list" aria-controls="rc_select_TEST_OR_SSR_list" aria-activedescendant="rc_select_TEST_OR_SSR_list_0" value=""></span>
        <!----><span class="xy-select-selection-placeholder">input here</span>
      </div>
      <!---->
      <!---->
      <!---->
    </div>
  </div>
  <!---->
  <div class="xy-space-item">
    <div style="width: 200px;" class="xy-select-show-search xy-select-auto-complete xy-select-status-warning css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select xy-select-show-search xy-select-auto-complete xy-select-status-warning css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select-single xy-select-allow-clear xy-select-show-search">
      <!---->
      <div class="xy-select-selector"><span class="xy-select-selection-search"><input type="search" class="xy-select-selection-search-input" id="rc_select_TEST_OR_SSR" autocomplete="off" role="combobox" aria-haspopup="listbox" aria-owns="rc_select_TEST_OR_SSR_list" aria-autocomplete="list" aria-controls="rc_select_TEST_OR_SSR_list" aria-activedescendant="rc_select_TEST_OR_SSR_list_0" value=""></span>
        <!----><span class="xy-select-selection-placeholder">input here</span>
      </div>
      <!---->
      <!---->
      <!---->
    </div>
  </div>
  <!---->
</div>"
`;

exports[`renders ./src/auto-complete/demo/uncertain-category.vue correctly 1`] = `
"<div class="global-search-wrapper" style="width: 300px;">
  <div style="width: 300px;" class="xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select xy-select-show-search xy-select-auto-complete css-dev-only-do-not-override-1p3hq3p xy-select-show-search xy-select-auto-complete xy-select-single xy-select-customize-input xy-select-show-search">
    <!---->
    <div class="xy-select-selector"><span class="xy-select-selection-search"><span class="xy-input-group-wrapper xy-select-selection-search-input xy-input-search xy-input-search-large xy-input-search-with-button xy-select-selection-search-input xy-select-selection-search-input xy-input-search xy-input-search-large xy-input-search-with-button xy-select-selection-search-input xy-input-group-wrapper-lg css-dev-only-do-not-override-1p3hq3p"><span class="xy-input-wrapper xy-input-group css-dev-only-do-not-override-1p3hq3p"><!----><input type="search" class="xy-input xy-input-lg css-dev-only-do-not-override-1p3hq3p" placeholder="input here" autocomplete="off" id="rc_select_TEST_OR_SSR" role="combobox" aria-haspopup="listbox" aria-owns="rc_select_TEST_OR_SSR_list" aria-autocomplete="list" aria-controls="rc_select_TEST_OR_SSR_list" aria-activedescendant="rc_select_TEST_OR_SSR_list_0" value=""><span class="xy-input-group-addon"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary xy-btn-lg xy-input-search-button" type="button"><span style="display: contents;"><!----></span><span role="img" aria-label="search" class="anticon anticon-search"><svg focusable="false" data-icon="search" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"></path></svg><!----></span></button></span></span></span></span>
      <!----><span class="xy-select-selection-placeholder"><!----></span>
    </div>
    <!---->
    <!---->
    <!---->
  </div>
</div>"
`;
